feat: Добавил сохранение истории в файл